methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:10: error: Boolean does not take parameters
  return vuBiscuit();
                  ^